# Geonum

./: CMakeLists.txt
data/: cross.off  cube_quad.off  cube_tri.off  dodecahedron.off  icosahedron.off  octahedron.off  suzy.off  tetrahedron.off  torus.off
src/: Mesh.cpp  Mesh.h  main.cpp
